--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <head>
     <script src="https://kit.fontawesome.com/8b843a444f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style/style.css"
 
 </head>
 
