--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-
+<html>
 <head>
     <script src="https://kit.fontawesome.com/8b843a444f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/style.css"
+    <link rel="stylesheet" href="style/style.css">
+
 
 </head>
 
@@ -43,24 +44,24 @@
         <div class="container">
             <section id="features">
                 <div class="grid">
-                    <div class="icon"><i class="fas fa-heart"></i></div>
+                    <div class="icon"><i class="fas fa-heart fa-3x"></i></div>
                     <div class="desc">
                         <h2>Hijyenik Kargo Sistemi</h2>
-                        <p>Pandemi koşullarına uygun kargolama</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="grid">
-                    <div class="icon"><i class="far fa-credit-card"></i></div>
+                    <div class="icon"><i class="far fa-credit-card fa-3x"></i></div>
                     <div class="desc">
                         <h2>Güvenli Alışveriş</h2>
-                        <p>3d Secure ile tamamen güvenli alışveriş imkanı</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="grid">
-                    <div class="icon"><i class="fas fa-headset"></i></div>
+                    <div class="icon"><i class="fas fa-headset fa-3x"></i></div>
                     <div class="desc">
                         <h2>7/24 İletişim</h2>
-                        <p>Müşteri hizmetilerine ulaşma imkanı</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
             </section>
@@ -108,3 +109,4 @@
         </div>
     </div>
 </body>
+</html>
